# SyInfer

./: CMakeLists.txt
infer/: CMakeLists.txt  infer.cpp
infer/include/: alloc.h  alloc_cpu.h  alloc_gpu.h  base.h  buffer.h  tensor.h
infer/include/op/: rmsnorm_kernel_cpu.h  rope_kernel_cpu.h  swiglu_kernel_cpu.h
infer/include/op/cpu_kernel/: emb_kernel_cpu.h  matmul_kernel_cpu.h  mha_kernel.h  rmsnorm_kernel_cpu.h  scale_sum_kernel.h  softmax_kernel_cpu.h
infer/include/op/gpu_kernel/: gemv_kernel_cuda.cuh  mha_kernel_cuda.cuh  rmsnorm_kernel_cuda.cuh  rope_kernel_cuda.cuh
infer/src/: alloc.cpp  alloc_cpu.cpp  alloc_gpu.cpp  base.cpp  buffer.cpp  rmsnorm_kernel_cpu.cpp  tensor.cpp
infer/src/op/: softmax_kernel_cpu.cpp  swiglu_kernel_cpu.cpp
infer/src/op/cpu_kernel/: emb_kernel_cpu.cpp  matmul_kernel_cpu.cpp  mha_kernel.cpp  rmsnorm_kernel_cpu.cpp  rope_kernel_cpu.cpp  scale_sum_kernel.cpp
infer/src/op/gpu_kernel/: gemv_kernel_cuda.cu  mha_kernel_cuda.cu  rmsnorm_kernel_cuda.cu  rope_kernel_cuda.cu
tests/: CMakeLists.txt  test_emb.cpp  test_gemv.cpp  test_mha.cpp  test_rmsnorm.cpp  test_rope.cpp  test_scale_sum.cpp  test_softmax.cpp  test_swiglu.cpp  test_tensor.cpp
